fix: spacing

--- a/index.scss
+++ b/index.scss
@@ -6,14 +6,14 @@
     margin: auto;
     border-radius: 1em;
     div {
-        margin-top: 1em;
+        margin-top: 1.5em;
         h1 {
             font-weight: 700;
             color: hsl(218, 44%, 22%);
         }
     }
     p {
-        margin-top: 1em;
+        margin: 1.2em 0;
         font-weight: 400;
         color: hsl(220, 15%, 55%);
     }
